CHATS_SIT/force-app/main/default/objects/Canned_Report_Request__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00005</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Generated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Canned Report Request External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Financial</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Provider</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>State Monitoring</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SYS</fullName>
                    <label>System Generated</label>
                </value>
                <value>
                    <fullName>MAN</fullName>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INI</fullName>
                    <label>Initialized</label>
                </value>
                <value>
                    <fullName>REQ</fullName>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>GEN</fullName>
                    <label>Generated</label>
                </value>
                <value>
                    <fullName>FAL</fullName>
                    <label>Failed</label>
                </value>
                <value>
                    <fullName>PEN</fullName>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Canned_Report_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Canned Report Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>County__c</columns>
        <columns>Date_Generated__c</columns>
        <columns>End_Date__c</columns>
        <columns>Report_Id__c</columns>
        <columns>Report_Name__c</columns>
        <columns>Report_Type__c</columns>
        <columns>Request_Description__c</columns>
        <columns>User__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Canned Report Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canned Report Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>