CHATS_SIT/force-app/main/default/objects/Canned_Report_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>County__c</columns>
    <columns>Date_Generated__c</columns>
    <columns>End_Date__c</columns>
    <columns>Report_Id__c</columns>
    <columns>Report_Name__c</columns>
    <columns>Report_Type__c</columns>
    <columns>Request_Description__c</columns>
    <columns>User__c</columns>
    <columns>Date_Requested__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>006377</value>
    </filters>
    <label>All</label>
</ListView>