CHATS_SIT/force-app/main/default/objects/Canned_Report_Request__c/listViews/Datafix_User.listView-meta.xml
<ListView>
    <fullName>Datafix_User</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <columns>Date_Generated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>End_Date__c</columns>
    <columns>Report_Name__c</columns>
    <columns>Report_Id__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Date_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>INI</value>
    </filters>
    <label>Datafix User</label>
</ListView>